<resources>
    <string name="app_name">DigitalShoppingCart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="title_activity_product__list">Product_List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="if_you_are_not_registered_click_here_to_register">if you are already registered click here to login</string>
    <string name="user_name">User Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="enter_second_name">Enter second name</string>
    <string name="address">Address</string>
    <string name="submit">submit</string>
    <string name="request_register">If not registered click here to LOGIN</string>
    <string name="email_err">email not the same</string>
    <string name="passwd_err">password not the same</string>
    <string name="all_fields_err">Field/fileds empty or wrongly input...</string>
    <string name="uploading_user_err">adding customer was usuccessfully</string>
    <string name="product_name">Product Name</string>
    <string name="color">Color</string>
    <string name="origin">Origin</string>
    <string name="todo">TODO</string>
    <string name="title_activity_admin">Admin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="heading_add">ADD NEW PRODUCT DETAILS</string>
    <string name="add_product">submit</string>
    <string name="price">Price</string>
    <string name="product_description">Product Description</string>
    <string name="serial_number">Serial Number</string>

    <string name="image_url">Image URL</string>
    <string name="admin">Admin</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="serial_no">Serial_No</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="item_name">item_name</string>
    <string name="total">Total</string>
    <string name="add_quantity">+</string>
    <string name="reduce_quantity">-</string>
    <string name="product_id_tab">product_id</string>
    <string name="m_pesa">M-Pesa</string>
    <string name="check_out_pay"><![CDATA[Check out & Pay]]></string>
    <string name="visa_credit_card">Visa Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="add_to_shopping_list">Add To Shopping List</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="title_activity_bar_code_scanner">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="till_number">Till Number</string>
    <string name="m_pesa_pin">M-PESA PIN</string>
    <string name="phone_number">Phone Number</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="pay_via_mpesa">Pay Via Mpesa</string>
    <string name="transmes">Please wait for safaricom transaction to be completed</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pprice">price</string>
    <string name="title_activity_register">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>