<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    tools:context=".ui.gallery.GalleryFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="398dp"
        android:layout_height="487dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/product_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#FFFFFF"
                android:clipToPadding="true"
                android:dividerPadding="8dp"
                android:elevation="16dp"
                android:gravity="center_vertical"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true"
                android:padding="16dp"
                android:scrollbarStyle="outsideOverlay"
                android:showDividers="beginning|end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/teal_700"
                    android:padding="4dp"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="171dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/shopping_cart"
                        android:textColor="@color/heading_text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/cart_titles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/product_id_tab"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/item_name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/serial_no"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/quantity"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/add_quantity"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/reduce_quantity"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/delete"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="Total"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="127dp"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="223dp"
        android:layout_height="64dp"
        android:background="@color/button_color"
        android:backgroundTint="@color/button_color"
        android:text="@string/check_out_pay"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pay_card_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="24dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/payment_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/mpesa_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_pesa" />

            <RadioButton
                android:id="@+id/visa_radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visa_credit_card" />

            <RadioButton
                android:id="@+id/debit_radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit_card" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pbbarcart"
        style="?android:attr/progressBarStyle"
        android:layout_width="75dp"
        android:layout_height="58dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>